# chessstatemachine

./: .gitignore  CMakeLists.txt  README.md  cmake-single-platform.yml
.github/workflows/: cmake-single-platform.yml
docs/: stateDiagram.mmd
include/: statemachine.hpp
src/: main.cpp  statemachine.cpp
test/: test_sm.cpp  test_statemachine.cpp
